# data-apps

./: CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
streamlit/: Data_Apps.py  Structured_Data.py  Super_Agent_Tools.py  helper.py
streamlit/pages/: Create_Entity.py  Create_Triple.py  Text_to_Triples.py
